--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,15 @@
 
 # misc
 .DS_Store
+
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
