Corrijo .gitignore y agrego .env del microservicio de turnos

--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,15 @@
 # misc
 .DS_Store
 
-# Environment variables
+# Environment variables (ignoramos todos los .env EXCEPTO el que queremos)
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# PERMITIR el .env del microservicio de turnos
+!backend/servicios/turnos/.env
 
 # Logs
 npm-debug.log*
